--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-router-dom": "^6.4.1",
     "react-scripts": "5.0.1",
     "react-toastify": "^9.0.8",
+    "recoil": "^0.7.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
